--- a/loadbalanced-fargate-svc/loadbalanced-fargate-svc/v1/.template-registration.yaml
+++ b/loadbalanced-fargate-svc/loadbalanced-fargate-svc/v1/.template-registration.yaml
@@ -1,6 +1,6 @@
 compatible_environments:
-- loadbalanced-fargate-env:1
-- loadbalanced-fargate-env:1.1
+  loadbalanced-fargate-env:1
+  loadbalanced-fargate-env:1.1
 
 supported_component_sources:
-  - DIRECTLY_DEFINED
+  DIRECTLY_DEFINED
